@@ -1496,6 +1496,7 @@ commit_filesdoneproc (callerdat, err, repository, update_dir, entries)
 		cvs_output (": Executing '", 0);
 		run_print (stdout);
 		cvs_output ("'\n", 0);
+		cvs_flushout ();
 		(void) run_exec (RUN_TTY, RUN_TTY, RUN_TTY, RUN_NORMAL);
 		free (repos);
 	    }
